# cs4032-socket-client

./: LICENSE  README.org  socket-client.cabal
app/: Main.hs
