name:                socket-client
version:             0.1.0.0
description:         Please see README.org
homepage:            https://github.com/houli/socket-client#readme
license:             BSD3
license-file:        LICENSE
author:              Eoin Houlihan
maintainer:          ehoulih@tcd.ie
copyright:           2016 Eoin Houlihan
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable socket-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , network
                     , HTTP
                     , bytestring
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/houli/socket-client
